# rag-chatbot

./: .gitignore  Readme.md  chat.py  pdftomd.py  pyproject.toml  tracker.json
vectorstore_db/f341f22d-c1ec-46bc-8057-7d3a0ef63d85/: index_metadata.pickle
